# TreeManager

./: CMakeLists.txt  README.md
documentation/html/: annotated.html  annotated_dup.js  class_executor-members.html  class_executor.html  class_executor.js  class_tree-members.html  class_tree.html  class_tree.js  class_trie-members.html  class_trie.html  class_trie.js  classes.html  executor_8cpp.html  executor_8h.html  executor_8h_source.html  file__manager_8cpp.html  file__manager_8h.html  file__manager_8h.js  file__manager_8h_source.html  files.html  files_dup.js  functions.html  functions_func.html  functions_rela.html  globals.html  globals_defs.html  globals_func.html  index.html  main_8cpp.html  menudata.js  navtreedata.js  navtreeindex0.js  struct_file_manager-members.html  struct_file_manager.html  struct_file_manager.js  tree_8cpp.html  tree_8cpp.js  tree_8h.html  tree_8h.js  tree_8h_source.html  (+4 more)
documentation/html/search/: all_2.js  all_3.js  all_5.js  all_6.js  all_8.js  all_9.js  classes_1.js  classes_2.js  defines_0.js  files_0.js  files_1.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_7.js  functions_8.js  functions_a.js  related_0.js  searchdata.js
source/: FileManager.cpp  FileManager.h  executor.cpp  executor.h  file_manager.cpp  file_manager.h  main.cpp  tree.cpp  tree.h  trie.cpp  trie.h
tests/: test-tree.cpp  test-trie.cpp  test.cpp
